--- a/index.html
+++ b/index.html
@@ -69,10 +69,93 @@
                         <div class="card" id="indie">Indie</div>
                     </div>
                 </div>
-                <div class="bottom-right"></div>
+                <div class="bottom-right">
+                    <div class="botton-heading">
+                        <h2>Top Songs</h2>
+                        <a href="#">See all..</a>
+                    </div>
+
+                    <div class="first-line">
+                        <h2>01</h2>
+                        <img src="imgs/image-patrick.jpg" alt="a dog" id="dog">
+                        <div class="name">
+                            <p id="title-song">Sunrise</p>
+                            <p>Lila Revira</p>
+                        </div>
+                    </div>
+                    <div class="push-via">
+                        <p>02.45</p>
+                        <i class="fa fa-play" aria-hidden="true" id="play"></i>
+                        <i class="fa fa-star" aria-hidden="true" id="star"></i>
+                    </div>
+
+                    <div class="first-line">
+                        <h2>02</h2>
+                        <img src="imgs/dog.jpg" alt="a dog" id="dog">
+                        <div class="name">
+                            <p id="title-song">Voyage</p>
+                            <p>anna vira</p>
+                        </div>
+                    </div>
+                    <div class="push-via">
+                        <p>04.00</p>
+                        <i class="fa fa-play" aria-hidden="true" id="play"></i>
+                        <i class="fa fa-star" aria-hidden="true" id="star"></i>
+                    </div>
+
+                    <div class="first-line">
+                        <h2>03</h2>
+                        <img src="imgs/image-kira.jpg" alt="a dog" id="dog">
+                        <div class="name">
+                            <p id="title-song">Derniere danse</p>
+                            <p>Kira ira</p>
+                        </div>
+                    </div>
+                    <div class="push-via">
+                        <p>03.41</p>
+                        <i class="fa fa-play" aria-hidden="true" id="play"></i>
+                        <i class="fa fa-star" aria-hidden="true" id="star"></i>
+                    </div>
+
+                    <div class="first-line">
+                        <h2>04</h2>
+                        <img src="imgs/image-jeanette.jpg" alt="a dog" id="dog">
+                        <div class="name">
+                            <p id="title-song">Harder</p>
+                            <p>Tyla</p>
+                        </div>
+                    </div>
+                    <div class="push-via">
+                        <p>02.45</p>
+                        <i class="fa fa-play" aria-hidden="true" id="play"></i>
+                        <i class="fa fa-star" aria-hidden="true" id="star"></i>
+                    </div>
+
+                </div>
             </div>
         </div>
-        <div class="end"></div>
+        <div class="end">
+            <div class="top-proj">
+                <i class="fa fa-bell" aria-hidden="true"></i>
+                <i class="fa fa-cog" aria-hidden="true"></i>
+                <img src="imgs/image-jonathan.jpg" alt="a man">
+                <div class="namw">Joh Dhoe</div>
+            </div>
+
+            <div class="bottom-proj">
+                <div class="heading">
+                    <h2>Player</h2>
+                    <i class="fa fa-music" aria-hidden="true"></i>
+                </div>
+            </div>
+
+            <div class="image-div">
+                <img src="imgs/jazz.jpg" alt="">
+                <h2>Ripple Echoes</h2>
+                <p>Kael Fisher</p>
+                <p>Best 2024</p>
+            </div>
+        </div>
     </div>
 
 </body>
