finished styling the sidebar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,39 @@
 <body>
     <!-- <h1>Hello</h1> -->
     <div class="container">
-        <div class="sidebar"></div>
+        <div class="sidebar">
+            <DIV class="ICON">ASMR proj</DIV>
+            <div class="menu">
+                <p id="title">MENU</p>
+
+                <p> <i class="fa fa-search" aria-hidden="true"></i> Explore</p>
+                <p><i class="fa fa-volume-up" aria-hidden="true"></i> Genres</p>
+                <!-- <p><i class="fa fa-circle-thin" aria-hidden="true"></i> Album</p> -->
+                <p><i class="fa fa-microphone" aria-hidden="true"></i> Artist</p>
+                <p><i class="fa fa-podcast" aria-hidden="true"></i> Podcast</p>
+            </div>
+            <div class="libray">
+                <p id="title">Library
+                </p>
+                <p><i class="fa fa-undo" aria-hidden="true"></i> Recent</p>
+                <p><i class="fa fa-folder" aria-hidden="true"></i>Albums</p>
+                <p><i class="fa fa-heart" aria-hidden="true"></i>Favorite</p>
+                <p><i class="fa fa-location-arrow" aria-hidden="true"></i>Local</p>
+            </div>
+            <div class="playlist">
+                <p id="title">Playlist</p>
+                <p><i class="fa fa-plus-circle" aria-hidden="true"></i>Create new</p>
+                <p><i class="fa fa-trophy" aria-hidden="true"></i>Best of 2023</p>
+                <p><i class="fa fa-trophy" aria-hidden="true"></i>Best of 2024</p>
+                <p><i class="fa fa-th-large" aria-hidden="true"></i>Best of Fisher</p>
+            </div>
+
+            <div class="bottom">
+                <img src="imgs/jazz.jpg" alt="" width="50px" height="50px">
+                <p> pythonBeast</p>
+                <p>Apple Music</p>
+            </div>
+        </div>
         <div class="center">
             <div class="top">
                 <div class="links">
@@ -150,10 +182,10 @@
             </div>
 
             <div class="image-div">
-                <img src="imgs/jazz.jpg" alt="">
-                <h2>Ripple Echoes</h2>
+                <img src="imgs/musica.png" alt="">
+                <!-- <h2>Ripple Echoes</h2>
                 <p>Kael Fisher</p>
-                <p>Best 2024</p>
+                <p>Best 2024</p> -->
             </div>
         </div>
     </div>
